# leptos-charming

./: Cargo.toml  README.md
.github/: dependabot.yml
examples/simple-chart/: Cargo.toml  index.html
examples/simple-chart/src/: app.rs  main.rs
leptos-charming/: Cargo.toml
leptos-charming/src/: components.rs  lib.rs
leptos-charming/src/components/: axis.rs  chart.rs  series.rs
