[package]
name = "simple-chart"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
leptos = { version = "0.6", default-features = false, "features" = ["csr"] }
leptos-charming = { path = "../../leptos-charming", default-features = false, features = [
    "csr",
] }

web-sys = { version = "0.3", features = ["HtmlBodyElement"] }

[features]
csr = []
